step8 clear